fix alignment

--- a/frontend/src/styles/SplashVertical.module.css
+++ b/frontend/src/styles/SplashVertical.module.css
@@ -5,7 +5,7 @@
 	font-family: 'Josefin Sans', Georgia, Times, serif;
 	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
 		url("../static_resources/homephoto.jpg"); /** https://stackoverflow.com/questions/8195215/css-background-image-on-background-color **/
-	height: calc(80vh + 100px);  /*+64px*/
+	height: calc(80vh + 60px);  /*+64px*/
 	background-size: cover;
 	background-position-x: 70%;
 	background-position-y: 10%;
@@ -196,7 +196,7 @@ h3 {
 }
 
 .body {
-    /* background-color:bisque; */
+    background-color:bisque;
     min-height: 50vh;
     font-size:24px;
     text-align: center;
